// https://dbdiagram.io/d
// https://dbml.dbdiagram.io/docs

Table user {
  user_id UUID [primary key]
  username String
  email String
  password String
  wallet BigDecimal
  created Instant
  modified Instant
}

Table buyer {buyer_id UUID [primary key]}
Table seller {seller_id UUID [primary key]}

Table product {
  product_id UUID [primary key]
  name String
  unitPrice BigDecimal 
  stock Integer
  created Instant
  modified Instant
  seller_id UUID // FK
}

Table review {
  review_id UUID [primary key]
  rating Integer
  comment String
  created Instant
  modified Instant
  buyer_id UUID //FK
  product_id UUID //FK
}

Table transaction {
  transaction_id UUID [primary key]
  totalPrice BigDecimal 
  amout Integer
  created Instant
  modified Instant
  buyer_id UUID //FK
  product_id UUID //FK
}

Ref: user.user_id - buyer.buyer_id //one-to-one
Ref: user.user_id - seller.seller_id
Ref: seller.seller_id < product.seller_id //one-to-many
Ref: buyer.buyer_id < review.buyer_id
Ref: product.product_id < review.product_id
Ref: buyer.buyer_id < transaction.buyer_id
Ref: product.product_id < transaction.product_id
